src/test/resources/frontendReference/invalid/semanticErr/class/simple/classDoubleClass.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 19:2 -- Class 'c' was already defined in this scope.